Fixes dark mode text color issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2326,6 +2326,10 @@ canvas.particles-js-canvas-el {
   .text-muted, .about .personal-info span, .language-skill h4 span {
     color: #d2d2d2 !important;
   }
+
+  .about .general-info {
+    color: #d2d2d2 !important;
+  }
   
   .blog-content h5 a.text-dark:hover, .blog-content h5 a.text-dark:focus {
     color: #d2d2d2 !important;
